Fix issue with user page not stretching

--- a/src/styles/_objects.scss
+++ b/src/styles/_objects.scss
@@ -9,14 +9,17 @@
 
   .page {
     flex: 1;
+    display: flex;
+    flex-flow: column nowrap;
   }
 }
 
 .container {
-  height: 100%;
-  max-width: 100%;
+  flex: 1;
   display: flex;
   flex-direction: row;
+  max-width: 100%;
+  height: 100%;
   width: 100%;
   background-color: var(--color-type-7);
 }
